# llmrag

./: .env.example  .gitignore  CLAUDE.md  README.md  check_server.py  db.py  gradio_browser.py  hybrid_search.db  info.py  ingest.py  kill_port_7860.sh  llm_reranker.py  llm_wrapper.py  pyproject.toml  query.py  sqlite_fts5.py  start_embedding_server.sh  test_chunking.py  test_llm_wrapper.py
chroma_db/17c39ba6-265f-47ec-99ac-612045979350/: index_metadata.pickle
chroma_db/18cc9fa6-553e-458d-9201-ac70d248bb77/: index_metadata.pickle
chroma_db/d01f0127-b06b-47e7-837b-e1a6456b5410/: index_metadata.pickle
